--- a/css/style.css
+++ b/css/style.css
@@ -1,138 +1,167 @@
-                                                                
+  
 .border {
-    width: 800px;
-    height: 200px;
-    border: 3px solid green;
-    margin:30px;
+  width: 800px;
+  height: 200px;
+  border: 3px solid green;
+  margin:30px;
+}
+
+h1 {
+			color: green;
+      text-align: center;
+		}
+
+.box-color { 
+   background-color:light green; width: 100% 
+  
+}
+x
+  .bigtext {
+    color: white;
+    font-size: 20rem;
+}
+
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.box {
+  width: 150px;
+  margin: 1rem 0;
+  padding:1px;
+}
+
+.column{
+  float: right;
+  width: 64%;
+  padding: 3px;
+  position:relative;
+}
+
+footer {
+  background-color: black;
+  overflow: hidden;
+  padding: 10px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  color: #f2f2f2;
+  position: bottom;
+   
   }
-  
-  h1 {
-              color: green;
-        text-align: center;
-          }
-  
-  .box-color { 
-     background-color:light green; width: 100% 
-    
+ .content {
+  max-width: 100%;
+  margin: 40px;
+  text-align: center;
+   
+ }
+
+ .contact-box-center {
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+    text-align: center; 
+ }
+   
+ #contact {
+    margin-bottom: 50px;
+}
+
+.contact-boxes-container {
+    width: 70%;
+    margin: 0 auto;
   }
+
+
+.contact-box-left {
+    width: 250px;
+    margin-top: -20px;
+	  float: left;
+}
+
+.contact-box-right {
+    width: 250px;
+    text-align: right;
+    margin-top: -20px;
+	  float: right;
+}
   
-.bigtext {
-      color: white;
-      font-size: 20rem;
-  }
-  
-  .topnav {
-    background-color: #333;
-    overflow: hidden;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .box {
-    width: 150px;
-    margin: 1rem 0;
-    padding:1px;
-  }
-  
-  .column{
-    float: right;
-    width: 64%;
-    padding: 3px;
-    position:relative;
-  }
-  
-  footer {
-    background-color: black;
-    overflow: hidden;
-    padding: 10px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    color: #f2f2f2;
-    position: bottom;
-     
-    }
-   .content {
-    max-width: 100%;
-    margin: 40px;
-    text-align: center;
-     
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  img: float-left;
+  } 
+
+.float-right{
+     float:right;
    }
-  
-   .contact-box-center {
-      width: 250px;
-      height: 250px;
-      margin: 0 auto;
-      text-align: center;  
+
+.float-left{
+     float:left;
    }
-     
-   #contact {
-      margin-bottom: 50px;
-  }
-  
-  .contact-boxes-container {
-      width: 70%;
-      margin: 0 auto;
-  }
-  
-  .contact-box-left {
-      width: 250px;
-      margin-top: -20px;
-        float: left;
-  }
-  
-  .contact-box-right {
-      width: 250px;
-      text-align: right;
-      margin-top: -20px;
-        float: right;
-  }
-    
-  .flex-container {
-    display: flex;
-    justify-content: left;
-    text-align: center;
-    } 
-  
-  .float-right{
-       float:right;
-     }
-  
-  .float-left{
-       float:left;
-     }
-  
-  ul { 
-      display: inline-block; 
-      text-align: left; 
-    font-size: 20px;
-      }
-  
-  li{
-    font-size: 20px;
-  }
-  
-  .container {
-    max-width: 80%;
-    margin-top: 50px;
-    margin-left: 10%
-  }
-  
-  p{
-    padding: 15px;
-    font-size: 20px;
-    border-radius: 10px; 
-  }
-  
+
+ul { 
+	display: inline-block; 
+	text-align: left; 
+  font-size: 20px;
+  display: table;
+  margin: 0 auto;
+	}
+
+li{
+  font-size: 20px;
+  margin: 20px;
+}
+
+
+
+p{
+  padding: 15px;
+  font-size: 20px;
+  border-radius: 10px; 
+}
+
+/* front page test */
+
+body {
+  padding: 0;
+}
+
+.container {
+  border: 3px solid green;
+  padding: 20px 40px 40px;
+  max-width: 80%;
+  margin-top: 50px;
+  margin-left: 6.5%  
+}
+
+&__image {
+    display: inline-block;
+    vertical-align: top;
+    width: 46%;
+    margin: 30px 30px 0 0;
+}
+
+&__text {
+    display: inline-block;
+    width: 46%;
+    @media (max-width: 620px) {
+      width: 100%;
+}
   
